# Backend

./: .gitignore  Procfile  READEME.md  README.md  local_db.sqlite3  pyproject.toml  requirements.txt
abi/chain_link/: MockV3Aggregator.py
abi/ocf/: ComptrollerLib.py  FundDeployer.py
abi/others/: PangolinRouter.py
core/: schema.py  schemas.py  settings.py  settings_dev.py  settings_dev_local_db.py  settings_dev_product_db.py  urls.py
data/: Asset-2022-10-18 (2).csv  LiquidityManagement copy.csv  LiquidityManagement-2022-09-04.csv  LiquidityManagement.csv  OCF address - Asset.csv  Price.csv  PriceManagementNew.csv  PriceManagementNew_.csv  assets.json  assets_new.json  bulk_update.py  funds.json  liquidity_managements.json
fund/: admin.py  forms.py  get_price_ftx.py  model_schemas.py  models.py  schema.py  schemas.py  tasks.py  try.py  types.py
fund/asset_weight/: run_weights.py
fund/migrations/: 0001_initial.py  0002_fund_creator_alter_fund_comptroller_proxy_and_more.py  0003_alter_fund_comptroller_proxy_alter_fund_vault_proxy.py  0004_remove_fund_id_alter_fund_comptroller_proxy.py  0005_asset.py
learn/: contract.py  event.py  event_schedual.py  event_schedual_new.py  example.py  fund_deployer_abi.py  middleware.py  pangolin_router.py  try.py  wavax.py
management/: admin.py  event.py  fields.py  forms.py  get_factory.py  get_pair.py  models.py  tasks.py
schedual/: apps.py
siwe_auth/: backend.py  models.py
try/: try.py  val.py  val_test.py  val_usdt.py
try_app/: apps.py  makerdao_multicall.py  multicall.py  multicall_write.py  simple_multicall_read.py  simple_multicall_write.py  value.py
user/: apps.py
users/: admin.py  backend.py  managers.py  models.py  tests.py  views.py
utils/: constants.py  utils.py
(+240 files in other folders)
