[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
path = "^16.4.0"
pandas = "^1.4.4"
torch = "^1.12.1"
django-q = "^1.3.9"
tqdm = "^4.64.0"
django-import-export = "^2.8.0"
ciso8601 = "^2.2.0"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
django-filter = "^22.1"
django-ninja = "^0.19.1"
hexbytes = "^0.3.0"
strawberry-graphql-django = "^0.5.0"
strawberry-django-plus = "^1.25.2"
django-jsonform = "^2.12.0"
django-admin-interface = "^0.20.0"
Django = "4.1"
abnf = "1.1.1"
django-ratelimit = "3.0.1"
eth-retry = "^0.1.8"
simple-multicall = "^0.1.5"
strawberry-django-jwt = "^0.2.3"
web3 = "^5.31.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
